# mycelium-transpile

./: CROSS-REF.md  Cargo.toml  README.md
docs/vet-gha-runner-ctl-2026-07-22/: README.md  REMAP.md  summary.json  union.gap.json  vet.json
fixtures/monorepo/: cmp.myc  std-cmp-lib.rs
src/: batch.rs  emit.rs  map.rs  prim_map.rs  symtab.rs  transpile.rs  visit.rs
src/emit/derives/: eq.rs  mod.rs  show.rs
src/tests/: batch.rs  combinator.rs  corpus.rs  diff.rs  emit.rs  map.rs  mod.rs  mut_thread.rs  prim_map.rs  symtab.rs  type_map.rs
src/tests/fixtures/: emit_hook_golden.json
